fix header z-index.

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 
 body {
-	color: #000;
+  color: #000;
   margin: 0px;
-	font-size: 12px;
+  font-size: 12px;
 }
 img{
   border:0px;
@@ -13,37 +13,39 @@ header {
   top: 0px;
   width: 190px;
   height: 100%;
-  display: block;
-	padding: 0px;
+  display: block!important;
+  padding: 0px;
   margin: 0px;
-	background:URL(../img/left_bg.gif);
+  background:URL(../img/left_bg.gif);
   background-repeat: repeat-y;
-	background-color: #E7E7E7;
+  background-color: #E7E7E7;
   overflow:hidden;
   line-height: 0;
+  z-index: 1;
 }
 .container {
-  margin-top:5px;
-  margin-bottom:5px;
-  position: relative;
-  margin-left: 198px;
+  position: absolute;
+  left: 193px;
+  top: 0px;
+  display: block;
   line-height: normal;
   vertical-align: baseline;
 }
 .content {
+  margin: 5px;
   width: 555px;
 }
 
 h2 {
-	width : 245px;
-	height : 31px;
+  width : 245px;
+  height : 31px;
   line-height: 31px;
-	background:URL(../img/i_text02.gif);
-	font-size:14px;
-	color:#5A6573;
-	font-weight:bold;
+  background:URL(../img/i_text02.gif);
+  font-size:14px;
+  color:#5A6573;
+  font-weight:bold;
   padding-left: 40px;
-	margin-bottom:10px;
+  margin-bottom:10px;
 }
 
 .section {
@@ -52,10 +54,10 @@ h2 {
 }
 
 a{
-	color:black;
-	text-decoration : none;
+  color:black;
+  text-decoration : none;
 }
 a:hover{
-	color:black;
-	text-decoration : underline;
+  color:black;
+  text-decoration : underline;
 }
